Remove quickstart 8 from GA tests